<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF7F2">

        <Button
            android:id="@+id/button"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:text="@string/connect"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="220dp"
            android:layout_marginTop="125dp"
            app:cardBackgroundColor="#FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="35dp"
                        android:layout_weight="1"
                        android:text="@string/ip"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:layout_marginTop="30dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/edit1"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="100dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="60dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_weight="1"
                        android:text="@string/port"
                        android:textAlignment="textEnd"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editTextTextPersonName"
                        android:layout_width="wrap_content"
                        android:layout_height="58dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="@string/edit2"
                        android:inputType="textPersonName"
                        android:minHeight="48dp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>