<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Control">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EEF7F2">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="500dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardBackgroundColor="#2196F3"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/textView5"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="0.1"
                            android:text="@string/ip"
                            android:textAlignment="textEnd"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="120dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="50dp"
                            android:layout_height="30dp"
                            android:layout_weight="0.1"
                            android:text="@string/port"
                            android:textAlignment="textEnd"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="120dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textSize="16sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp">

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:text="TextView"
                            android:textAlignment="center"
                            android:textSize="24sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="290dp">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:background="@drawable/pick"
                    android:text="@string/pick"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/button5"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/up"
                    android:text="@string/forward"
                    app:layout_constraintBottom_toTopOf="@+id/button4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent" />

                <Button
                    android:id="@+id/button6"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/left"
                    android:text="@string/left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/button4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.501" />

                <Button
                    android:id="@+id/button7"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/down"
                    android:text="@string/back"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.498"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/button4" />

                <Button
                    android:id="@+id/button8"
                    style="@style/Widget.AppCompat.ImageButton"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="20dp"
                    android:background="@drawable/right"
                    android:text="@string/right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/button4"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.501" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>